# wtfl

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: build.yml  test.yml
wtfl/: __init__.py  grammar.py  internal_types.py  parser.py  reader.py  writer.py
