[tool.poetry]
name = "wtfl"
version = "1.2.0"
description = "Well-designed Text-based Friendly Language"
authors = ["Dmitry Gritsenko <k01419q45@ya.ru>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/evtn/wtfl"
homepage = "https://github.com/evtn/wtfl"
keywords = ["markup", "config"]

[tool.poetry.dependencies]
python = "^3.7"
lark = "^1.1.5"
lark-dynamic = "^1.0.4"
typing-extensions = "^4.5.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
mypy = "^1.2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
